infra/k8s/azure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yopago
  labels:
    app.kubernetes.io/part-of: yopago
